--- a/maimai.html
+++ b/maimai.html
@@ -14,7 +14,6 @@
 		#top{
 			height: 40px;
 			margin: 0 auto;
-			width: 1920px;
 		}
 		.toper{
 			width: 750px;
@@ -92,6 +91,7 @@
 			margin-top: -50px;
 		}
 		#nav{
+/*			width: 1920px;*/
 			height: 53px;
 			margin-top: 5px;
 			border-bottom: 4px solid green;
@@ -126,10 +126,12 @@
 		}
 		#img{
 			margin: 0 auto;
-			width:1920px;
+			width:100%;
 			height:670px;
 			background-image: url(img/banner.png);
 			background-repeat: no-repeat;
+			background-position: 50% 50%;
+			margin: 0 auto;
 		}
 		#bian{
 			width:80px;
@@ -420,18 +422,19 @@
 		}
 		#dibu{
 			background-color: #e5e5e5;
-			margin:  auto;
+			margin: 0 auto;
 		}
 		.dibu{
-			width: 1920px;
+			width: 100%;
 			height: 100px;
 			margin-top: 150px;
 			padding-top: 36px;
+			margin: 0 auto;
 		}
 		.diyi{
 			width:250px;
 			height: 60px;
-			margin-left: 400px; 
+			margin-left: 340px; 
 			background-image: url(img/f1.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -441,13 +444,13 @@
 			width:180px;
 			height: 60px;
 			line-height: 30px;
-			margin-left: 70px;
+			margin-left: 60px;
 			float: left;
 		}
 		.dier{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -456,7 +459,7 @@
 		.disan{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -465,7 +468,7 @@
 		.disi{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -513,8 +516,8 @@
 					<a href="#">免费注册</a>
 				</div>
 				<div class="ding">
-					<a href="#">我的订单 <img src="A:/img/triple.png"></a>
-					<a href="#">我的买猜 <img src="A:/img/triple.png"></a>
+					<a href="#">我的订单 <img src="img/triple.png"></a>
+					<a href="#">我的买猜 <img src="img/triple.png"></a>
 					<a href="#">帮助中心</a>
 				</div>
 				<div class="wei">
@@ -534,7 +537,7 @@
 		</div>
 		<div id="nav">
 			<div class="nav">
-				<span>全部商品分类 <img src="/img/triple.png"></span>
+				<span>全部商品分类 <img src="img/triple.png"></span>
 				<ul>
 					<li><a href="#">首页</a></li>
 					<li><a href="#">名酒</a></li>
