--- a/maimai.html
+++ b/maimai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>yushi</title>
@@ -423,11 +423,11 @@
 		#dibu{
 			background-color: #e5e5e5;
 			margin: 0 auto;
+			margin-top: 150px;
 		}
 		.dibu{
 			width: 100%;
 			height: 100px;
-			margin-top: 150px;
 			padding-top: 36px;
 			margin: 0 auto;
 		}
