--- a/maimai.html
+++ b/maimai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>yushi</title>
@@ -14,6 +14,7 @@
 		#top{
 			height: 40px;
 			margin: 0 auto;
+			width: 1920px;
 		}
 		.toper{
 			width: 750px;
@@ -91,7 +92,6 @@
 			margin-top: -50px;
 		}
 		#nav{
-/*			width: 1920px;*/
 			height: 53px;
 			margin-top: 5px;
 			border-bottom: 4px solid green;
@@ -126,12 +126,10 @@
 		}
 		#img{
 			margin: 0 auto;
-			width:100%;
+			width:1920px;
 			height:670px;
 			background-image: url(img/banner.png);
 			background-repeat: no-repeat;
-			background-position: 50% 50%;
-			margin: 0 auto;
 		}
 		#bian{
 			width:80px;
@@ -422,19 +420,18 @@
 		}
 		#dibu{
 			background-color: #e5e5e5;
-			margin: 0 auto;
-			margin-top: 150px;
+			margin:  auto;
 		}
 		.dibu{
-			width: 100%;
+			width: 1920px;
 			height: 100px;
+			margin-top: 150px;
 			padding-top: 36px;
-			margin: 0 auto;
 		}
 		.diyi{
 			width:250px;
 			height: 60px;
-			margin-left: 340px; 
+			margin-left: 400px; 
 			background-image: url(img/f1.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -444,13 +441,13 @@
 			width:180px;
 			height: 60px;
 			line-height: 30px;
-			margin-left: 60px;
+			margin-left: 70px;
 			float: left;
 		}
 		.dier{
 			width:250px;
 			height: 60px;
-			margin-left: 50px; 
+			margin-left: 60px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -459,7 +456,7 @@
 		.disan{
 			width:250px;
 			height: 60px;
-			margin-left: 50px; 
+			margin-left: 60px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -468,7 +465,7 @@
 		.disi{
 			width:250px;
 			height: 60px;
-			margin-left: 50px; 
+			margin-left: 60px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -516,8 +513,8 @@
 					<a href="#">免费注册</a>
 				</div>
 				<div class="ding">
-					<a href="#">我的订单 <img src="img/triple.png"></a>
-					<a href="#">我的买猜 <img src="img/triple.png"></a>
+					<a href="#">我的订单 <img src="A:/img/triple.png"></a>
+					<a href="#">我的买猜 <img src="A:/img/triple.png"></a>
 					<a href="#">帮助中心</a>
 				</div>
 				<div class="wei">
@@ -537,7 +534,7 @@
 		</div>
 		<div id="nav">
 			<div class="nav">
-				<span>全部商品分类 <img src="img/triple.png"></span>
+				<span>全部商品分类 <img src="/img/triple.png"></span>
 				<ul>
 					<li><a href="#">首页</a></li>
 					<li><a href="#">名酒</a></li>
