--- a/maimai.html
+++ b/maimai.html
@@ -26,7 +26,7 @@
 			float: left;
 		}
 		a{
-			color: black;
+			color: #black;
 			text-decoration: none;
 		}
 		.deng{
@@ -70,7 +70,7 @@
 			padding-left: 250px;
 			padding-top: 1px;
 			margin: 16px;
-			width:500px;
+			width:460px;
 			height: 50px;			
 			margin-top: 10px;		
 		}
@@ -534,7 +534,7 @@
 		</div>
 		<div id="nav">
 			<div class="nav">
-				<span>全部商品分类 <img src="/img/triple.png"></span>
+				<span>全部商品分类 <img src="img/triple.png"></span>
 				<ul>
 					<li><a href="#">首页</a></li>
 					<li><a href="#">名酒</a></li>
