--- a/maimai.html
+++ b/maimai.html
@@ -26,7 +26,7 @@
 			float: left;
 		}
 		a{
-			color: #black;
+			color: black;
 			text-decoration: none;
 		}
 		.deng{
@@ -70,7 +70,7 @@
 			padding-left: 250px;
 			padding-top: 1px;
 			margin: 16px;
-			width:460px;
+			width:450px;
 			height: 50px;			
 			margin-top: 10px;		
 		}
