--- a/maimai.html
+++ b/maimai.html
@@ -513,8 +513,8 @@
 					<a href="#">免费注册</a>
 				</div>
 				<div class="ding">
-					<a href="#">我的订单 <img src="A:/img/triple.png"></a>
-					<a href="#">我的买猜 <img src="A:/img/triple.png"></a>
+					<a href="#">我的订单 <img src="img/triple.png"></a>
+					<a href="#">我的买猜 <img src="img/triple.png"></a>
 					<a href="#">帮助中心</a>
 				</div>
 				<div class="wei">
