--- a/maimai.html
+++ b/maimai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>yushi</title>
@@ -69,7 +69,7 @@
 			padding-left: 250px;
 			padding-top: 1px;
 			margin: 16px;
-			width:410px;
+			width:660px;
 			height: 50px;			
 			margin-top: 10px;		
 		}
@@ -125,10 +125,12 @@
 		}
 		#img{
 			margin: 0 auto;
-			width:1920px;
+			width:100%;
 			height:670px;
 			background-image: url(img/banner.png);
 			background-repeat: no-repeat;
+			background-position: 50% 50%;
+			margin: 0 auto;
 		}
 		#bian{
 			width:80px;
@@ -419,18 +421,19 @@
 		}
 		#dibu{
 			background-color: #e5e5e5;
-			margin:  auto;
+			margin: 0 auto;
+			margin-top: 150px;
 		}
 		.dibu{
-			width: 1920px;
+			width: 100%;
 			height: 100px;
-			margin-top: 150px;
 			padding-top: 36px;
+			margin: 0 auto;
 		}
 		.diyi{
 			width:250px;
 			height: 60px;
-			margin-left: 400px; 
+			margin-left: 340px; 
 			background-image: url(img/f1.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -440,13 +443,13 @@
 			width:180px;
 			height: 60px;
 			line-height: 30px;
-			margin-left: 70px;
+			margin-left: 60px;
 			float: left;
 		}
 		.dier{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -455,7 +458,7 @@
 		.disan{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
@@ -464,7 +467,7 @@
 		.disi{
 			width:250px;
 			height: 60px;
-			margin-left: 60px; 
+			margin-left: 50px; 
 			background-image: url(img/f2.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
