--- a/maimai.html
+++ b/maimai.html
@@ -425,7 +425,7 @@
 			margin-top: 150px;
 		}
 		.dibu{
-			width: 100%;
+			width: 1400px;
 			height: 100px;
 			padding-top: 36px;
 			margin: 0 auto;
@@ -433,7 +433,7 @@
 		.diyi{
 			width:250px;
 			height: 60px;
-			margin-left: 340px; 
+			margin-left: 100px; 
 			background-image: url(img/f1.png);
 			background-repeat: no-repeat;
 			background-position: 2% 50%;
